[package]
edition      = "2024"
name         = "esp32s3-rgb-async"
rust-version = "1.88"
version      = "0.1.0"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "log-04", "unstable", "psram"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp32s3",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log                    = "0.4.27"

embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-futures = { version = "0.1.2" }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"

slint = { version = "=1.11.0", default-features = false, features = [ "libm", "unsafe-single-threaded", "compat-1-2", "renderer-software" ] }
embedded-graphics-core = { version = "0.4.0" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
